# ChangeLog for net-fs/shfs
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/shfs/ChangeLog,v 1.25 2006/01/06 13:09:42 gustavoz Exp $

  06 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> shfs-0.35-r2.ebuild:
  Keyworded ~sparc wrt #117832

*shfs-0.35-r2 (04 Jan 2006)

  04 Jan 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/0.35/shfs-0.35-clean-inode-clear.patch, +shfs-0.35-r2.ebuild:
  Revbump to clean up some problems.  Resolves bugs #78387, #81581, #112874,
  #101091.

  04 Jan 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/shfs-amd64-makefile.patch,
  -files/shfs-gentoo-0.31-makefile-root.diff,
  -files/shfs-gentoo-0.31-ppc.diff,
  -files/shfs-gentoo-0.32-makefile-debug.diff, -shfs-0.31.ebuild,
  -shfs-0.31-r1.ebuild, -shfs-0.32.ebuild, -shfs-0.32-r1.ebuild,
  -shfs-0.34.ebuild, -shfs-0.35.ebuild:
  A long needed pruning.

  23 Dec 2005; Saleem Abdulrasool <compnerd@gentoo.org> metadata.xml:
  Marking myself as the maintainer.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> shfs-0.35-r1.ebuild:
  Mark 0.35-r1 ~alpha

  19 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> shfs-0.35-r1.ebuild:
  Stable on ppc.

  09 Jun 2005; Mark Loeser <halcy0n@gentoo.org>
  +files/0.35/shfs-0.35-gcc4.patch:
  Adding patch to fix compilation with GCC4

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> shfs-0.35-r1.ebuild:
  stable on amd64

  19 Dec 2004; Stuart Herbert <stuart@gentoo.org> +files/0.35/df.patch,
  +files/0.35/space_chars.patch, +files/0.35/uidgid32.patch:
  Added patches; see bug #60270; thanks to S.Caglar Onur
  <caglar.onur@tubitak.gov.tr>

  14 Dec 2004; Stuart Herbert <stuart@gentoo.org> shfs-0.35.ebuild:
  Marked stable on x86 after plenty of user feedback ;)

*shfs-0.35 (26 Jun 2004)

  26 Jun 2004; Stuart Herbert <stuart@gentoo.org> +shfs-0.35.ebuild:
  Version bump; closes bug #52711

  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> shfs-0.31-r1.ebuild,