@@ -1,24 +1,52 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 db1b4cbee545ae381550436b7712b74f ChangeLog 4197
+MD5 1e50e9496061604702f29bf28d9875d2 ChangeLog 4300
+RMD160 fe57279aa5313b4ad892e701e1fa4fc1afee9ec0 ChangeLog 4300
+SHA256 70ac7cb1b3d29d2704e7829295e52fa8f28c64e955cee911c7030ec675d9e959 ChangeLog 4300
 MD5 29b3f063e5feb8c259abc86d07f92f85 files/0.35/df.patch 1652
+RMD160 88344860762ea85470e330e971707b24ffe07030 files/0.35/df.patch 1652
+SHA256 7d775f368e42e250040d48487c1123bd17ba0c953b7d5a5ec9538df6e12a2db4 files/0.35/df.patch 1652
 MD5 47388261d70d4dc5210fd93021dc8479 files/0.35/shfs-0.35-clean-inode-clear.patch 496
+RMD160 950527770374b1a55f08cf1d779a7ae5940bcf8c files/0.35/shfs-0.35-clean-inode-clear.patch 496
+SHA256 7513c2a3f25a7ac42c94c89f9dda3e658558fcd716210dde94cc1c8df16915a9 files/0.35/shfs-0.35-clean-inode-clear.patch 496
 MD5 aa8bade7210ab4840af4a009378a96c3 files/0.35/shfs-0.35-gcc4.patch 1008
+RMD160 364fd4820d5041211809293131d1850bc5f6577a files/0.35/shfs-0.35-gcc4.patch 1008
+SHA256 62dece02a5bec68f34e0d9b5eb4bc69d087772bb983ec6f3ab91c1ca1f899414 files/0.35/shfs-0.35-gcc4.patch 1008
 MD5 e5f37f793e95acdfd8e89affe9949160 files/0.35/space_chars.patch 1276
+RMD160 6f68980f39716570772ed3b340c70220fdcd66ed files/0.35/space_chars.patch 1276
+SHA256 e071e9fed81cbb5c4ecd7e62574136014fec1916a79277216d036233700fd859 files/0.35/space_chars.patch 1276
 MD5 29e5b080a1744f8283b8f55d5b904a60 files/0.35/uidgid32.patch 940
+RMD160 d4a3c057c61d1f352bb36bb4d605c85154fc8bff files/0.35/uidgid32.patch 940
+SHA256 d1b50f56d8a51cedd42746d5fd5dc75208f31134f2099d73d876a93d09787118 files/0.35/uidgid32.patch 940
 MD5 d9c3f912bc5642882b84fa7f3edd8db8 files/amd.conf 842
+RMD160 e5db7b84f8d201e95580e5ae4fb6afacc6d56423 files/amd.conf 842
+SHA256 d680f3f50b2d4f7bfb7f81b42ae55eea00a97a875ce3472ee809ee8e2b8423ec files/amd.conf 842
 MD5 97e8d1e483ac538a072e0e82af787eeb files/amd.shfs 152
-MD5 8bdaeb75d54befa6b5d6f2bfe6657a60 files/digest-shfs-0.35-r1 61
+RMD160 0c91fe76c5c76654131a3e3c853ff6f75ffa26d5 files/amd.shfs 152
+SHA256 678e7a1c5f5d6288390f5900f98d2fa8d7b54e9dd99432bcddb6a6a391ce7583 files/amd.shfs 152
+MD5 75f65e3cf2f6e55b656d19c95e20e8a7 files/digest-shfs-0.35-r1 229
+RMD160 aab2140106e569b8d91bc8a8db139f638258a6ae files/digest-shfs-0.35-r1 229
+SHA256 7614062a06a4db97cf760425cf5ba053774a670dc17f455c426f6213c38671f5 files/digest-shfs-0.35-r1 229
 MD5 8bdaeb75d54befa6b5d6f2bfe6657a60 files/digest-shfs-0.35-r2 61
+RMD160 0ef92536e9004dc0d831a1d050c3205edfe76b42 files/digest-shfs-0.35-r2 61
+SHA256 aecba5236f435448ccac9dabb2cae7c73a51fb9c5092bc532d49213888dd91b2 files/digest-shfs-0.35-r2 61
 MD5 bdf9a4a620ff5bcd7828251c144ec02b files/shfs.mount 1346
+RMD160 8ff7a10528136c6b3820a898a6bb69739d1b2561 files/shfs.mount 1346
+SHA256 c3885bc209d6533ea5396d0f6cea22753e8115b64c1c0df9261a4e4be8b79910 files/shfs.mount 1346
 MD5 b66027267bc1b372e656d834984ad137 metadata.xml 316
-MD5 7b0f99afbccc7ba0cb5199a72eb072b1 shfs-0.35-r1.ebuild 2862
+RMD160 30fe60772d122936494f213695185bb0813573cd metadata.xml 316
+SHA256 b35b4409d798f1bbed76ec77c74cd92f7a039d9ce6a46a354d923dadaacbf5f2 metadata.xml 316
+MD5 c3536676fb9853643bdb2482cbef8412 shfs-0.35-r1.ebuild 2861
+RMD160 e36f7c36745c3c5881f6566042a6bdf1f5c48b57 shfs-0.35-r1.ebuild 2861
+SHA256 4f3fd49697a57dd4a707bd7ca5902e6b474b33d06ba3c53a3b7efaba718db025 shfs-0.35-r1.ebuild 2861
 MD5 88a1923d6593369fbc861bc3c63a41ce shfs-0.35-r2.ebuild 2749
+RMD160 04f31a48dc4e5947e6f66bc7249fb0185c4933e6 shfs-0.35-r2.ebuild 2749
+SHA256 22263628cabbab8989672b8827267223a50f126b9e16c8fbed77166b0c39433b shfs-0.35-r2.ebuild 2749
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2-ecc0.1.6 (GNU/Linux)
+Version: GnuPG v1.4.2 (GNU/Linux)
 
-iD8DBQFDvmwjKRy60XGEcJIRArV7AJwLuGnEVxyzlrbZBn7rlUjj2UlAaQCfZBo0
-C+vYN8nlybbTylevfRBAWT8=
-=HXu7
+iD8DBQFD59e1JrHF4yAQTrARAqe/AKCXdjbs3NcIFxAuaFh/kEY+6EbtwQCeNRWK
+Rz8kwBvBdvFnPeXjEmwbtNA=
+=2Pb4
 -----END PGP SIGNATURE-----
