@@ -1,1 +1,3 @@
 MD5 016f49d71bc32eee2b5d11fc1600cfbe shfs-0.35.tar.gz 128656
+RMD160 84bc1c1d6bf5bd722fe1e4b3a4055843b11eda7a shfs-0.35.tar.gz 128656
+SHA256 0d48ffe4d801180c15466f20aaa5802adb9d22067e8941e051dc3c64717ec3c2 shfs-0.35.tar.gz 128656
